Recommended alternate method calls.